Fixed new-image-caption line-height for wrapped lines.

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -723,6 +723,7 @@ a:hover .issue-unpublished, a:active .issue-unpublished {
 .new-image-credit {
 	text-align: left;
 	font-size: 0.9em;
+	line-height: 1.6em;
 	margin-top: -1px;
 	color: @grayLight;
 	max-width: 280px;
